tests/semantic/case_err1.expected

Semantic Error [line 12]: value: "sc1_test"
	Unexpected l-value type: 
Expected type(s) 'Integer' or 'Boolean'; found 'String' instead.
